<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <Button
        android:id="@+id/fast_food_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="36dp"
        android:text="@string/fast_food"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/drink_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/drink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fast_food_button" />

    <Button
        android:id="@+id/dessert_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:text="@string/dessert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/drink_button" />

    <Button
        android:id="@+id/meal_button"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:text="@string/meal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dessert_button"
        app:layout_constraintVertical_bias="0.042" />

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="268dp"
        android:layout_height="91dp"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/meal_button"
        app:layout_constraintVertical_bias="0.313" />


</androidx.constraintlayout.widget.ConstraintLayout>